[package]
name = "proxy_checker"
version = "0.1.0"
authors = ["quantum"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.13"
reqwest = "0.11.2"
tokio = {version = "1.3.0", features=["net","rt-multi-thread"]}
